完成需求